# ctx_http

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bck.txt  README.md  TODO.md  build-ios.sh  build.sh  cmake-ios.sh  cmake.sh  cmake_alpine.sh  compile  compile_proto.sh  compile_proto_alpine.sh  deps.yaml  generate_alpine_cmake.py  generate_android_cmake.py  generate_cmake_lists  generate_cmake_lists.py  generate_host_cmake.py  generate_vscode_cmake.py  list_files.py  setup_ios.sh  xcode-compile
export/alpine/: http_request.pb.swift  http_response.pb.swift
proto/: http_request.proto  http_response.proto
scripts/: generate_alpine_cmake.py  generate_android_cmake.py  setup_android.sh
src/: CMakeLists.txt
src/common/: DataWrapper.cpp  DataWrapper.hpp
src/http/client/: Client.hpp  ClientImpl.cpp
src/http/client/iphone/: AlpineClientImpl.mm
src/http/models/: Request.cpp
src/jni/: jni_interface.cpp
src/proto/: http_request.pb.cc  http_request.pb.h  http_request.proto  http_response.pb.cc  http_response.pb.h  http_response.proto
src/protoc/proto/: http_request.pb.cc  http_request.pb.h  http_response.pb.cc  http_response.pb.h
tests/: CMakeLists.txt  client_tests.cpp
tests/mocks/: CMakeLists.txt  MockedClient.cpp  MockedClient.hpp
toolchains/: ios.toolchain.cmake
